Avoid duplicate instance stopping at Service Manager shutdown

Instances are explicitly stopped during Service Manager shutdown, but
then "stopped" again during individual Instance destruction. That
results in listeners being notified twice about each instance being
stopped if they aren't stopped before Service Manager shutdown.

This CL fixes that.

Bug: 831386
Change-Id: I210c9ce07cfa386d39bba7aa42244e00519b6f81
Reviewed-on: https://chromium-review.googlesource.com/1008968
Reviewed-by: Jay Civelli <jcivelli@chromium.org>
Commit-Queue: Ken Rockot <rockot@chromium.org>
Cr-Commit-Position: refs/heads/master@{#550179}
Former-commit-id: 74d30d0b031c2a5d01bafcfa6421ef3b4b6ae148